[project]
name = "cc-jsonl-fix"
version = "0.1.0"
description = "Repair tool for corrupted Claude Code session JSONL files with broken parentUuid chains"
readme = "README.md"
authors = [
    { email = "ymonster@163.com" }
]
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
keywords = ["claude-code", "jsonl", "repair", "session"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
